[package]
name = "NullOS"
version = "0.1.0"
edition = "2021"
exclude = ["Bootloader/*"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"