[package]
name = "NullOS"
version = "0.1.0"
edition = "2021"
exclude = ["Bootloader/*"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies]
core2 = { version = "0.4.0", default-features = false, features = ["alloc", "nightly"] }
derive_more = "0.99.0"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"

[dependencies.fatfs]
git = "https://github.com/rafalh/rust-fatfs"
default-features = false
features = ["alloc", "lfn", "unicode", "log_level_warn"]
